# farmtech-system

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/backend/: Dockerfile  main.py
src/backend/models/: models.py
src/backend/routers/: detector_objeto.py  estatistica.py  farmtech.py  fase1.py  fase2.py  fase3.py  fase4.py  predicao.py  simulador_esp32.py
src/backend/schemas/: schemas.py
src/backend/scripts/: estatistca.r
src/backend/scripts/r/: estatistca.r
src/dashboard/pages/: dash.py
src/estatistica/: Dockerfile
src/estatistica/r/: estatistica.r
src/estatistica/r/csv/: dados-planilha.csv  estrutura_tabelas.csv
src/frontend/: Dockerfile  main.py
src/frontend/pages/: esp32.py  estatistica.py  predicao.py
src/infra/: database.py
src/infra/database/: database.py
src/infra/ddl/: sql-generator-farmtech.ddl
src/infra/setup/: setup_db.py
